argocd/server-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: argocd-server
  name: argocd-server
spec:
  selector:
    matchLabels:
      run: argocd-server
  template:
    spec:
      containers:
        - name: argocd-server
          command:
            - argocd-server
            - --staticassets
            - /shared/app
            - --insecure
            - --disable-auth
