argocd/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`argocd.my-homelab.party`)
    priority: 0
    services:
    - kind: Service
      name: argocd-server
      namespace: argocd
      port: http
  tls:
    secretName: local-example-com-tls
